Issue corrected of button and alignment .of new tag nn

--- a/style1.css
+++ b/style1.css
@@ -534,7 +534,7 @@ img{
     font-weight: 700;
 }
 .address-link{
-    margin-left-:7px;
+    margin-left:7px;
     width: max-content;
 }
 .footer-social{
